Aress7/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Marketing_Focus__c</fullName>
        <inlineHelpText>Choose which marketing this account should receive.</inlineHelpText>
        <label>Account Marketing Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Strategic</fullName>
                </value>
                <value>
                    <fullName>Workplace</fullName>
                </value>
                <value>
                    <fullName>Workplace Strategic</fullName>
                </value>
                <value>
                    <fullName>Destination Retail</fullName>
                </value>
                <value>
                    <fullName>Destination Leisure</fullName>
                </value>
                <value>
                    <fullName>Destination Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <inlineHelpText>Choose the type of account this is.</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Route_to_Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Motor Group</fullName>
                </value>
                <value>
                    <fullName>Leasing Company</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Workplace</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Facilities Management</fullName>
                </value>
                <value>
                    <fullName>BE Influencer</fullName>
                </value>
                <value>
                    <fullName>Agents / Developers</fullName>
                </value>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Business Park</fullName>
                </value>
                <value>
                    <fullName>Depot</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
                <value>
                    <fullName>Airport</fullName>
                </value>
                <value>
                    <fullName>Carpark Operator</fullName>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Attraction</fullName>
                </value>
                <value>
                    <fullName>Holiday Venue</fullName>
                </value>
                <value>
                    <fullName>Car Club</fullName>
                </value>
                <value>
                    <fullName>University</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Grocer</fullName>
                </value>
                <value>
                    <fullName>Taxi</fullName>
                </value>
                <value>
                    <fullName>Sport Venue</fullName>
                </value>
                <value>
                    <fullName>Food/Beverage</fullName>
                </value>
                <value>
                    <fullName>Wildlife</fullName>
                </value>
                <value>
                    <fullName>Health/Wellbeing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_there_any_Won_Oportunites__c</fullName>
        <description>will be zero if there are no won opportunities for the account or 1 if there are.</description>
        <label>Are there any Won Oportunites</label>
        <summarizedField>Opportunity.Is_Opportunity_Won__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CPD_Conducted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPD Conducted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capsule_Import_ID__c</fullName>
        <label>Capsule Import ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capsule_Import_Zen_Created__c</fullName>
        <label>Capsule Import Zen_Created</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capsule_Import_Zen_ID__c</fullName>
        <label>Capsule Import Zen_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConsentLandingPageURL_SPPSUBE__c</fullName>
        <label>Landing Page URL If Applicable (SPPSUBE)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ConsentObtainedDate_HAHBE__c</fullName>
        <label>Date Preference Was Made (HAHBE)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ConsentObtainedDate_HAHBP__c</fullName>
        <label>Date Preference Was Made (HAHBP)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ConsentObtainedDate_SPPSUBE__c</fullName>
        <label>Date Preference Was Made (SPPSUBE)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ConsentType_HAHBE__c</fullName>
        <label>Consent Mechanism Type (HAHBE)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Express Consent</fullName>
                </value>
                <value>
                    <fullName>Soft Opt-In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConsentType_HAHBP__c</fullName>
        <label>Consent Mechanism Type (HAHBP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Express Consent</fullName>
                </value>
                <value>
                    <fullName>Soft Opt-In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConsentType_SPPSUBE__c</fullName>
        <label>Consent Mechanism Type (SPPSUBE)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Express Consent</fullName>
                </value>
                <value>
                    <fullName>Soft Opt-In</fullName>
                </value>
                <value>
                    <fullName>Manual Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Type__c</fullName>
        <label>Conversion Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Brand__c</fullName>
        <inlineHelpText>If the organisation type is Dealer, choose the brand associated with that dealer</inlineHelpText>
        <label>Dealer Brand</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Account_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Aston Martin</fullName>
                </value>
                <value>
                    <fullName>Audi</fullName>
                </value>
                <value>
                    <fullName>Bentley</fullName>
                </value>
                <value>
                    <fullName>BMW</fullName>
                </value>
                <value>
                    <fullName>Chevrolet</fullName>
                </value>
                <value>
                    <fullName>Citroen</fullName>
                </value>
                <value>
                    <fullName>Dacia</fullName>
                </value>
                <value>
                    <fullName>Fiat</fullName>
                </value>
                <value>
                    <fullName>Ford</fullName>
                </value>
                <value>
                    <fullName>Honda</fullName>
                </value>
                <value>
                    <fullName>Hyundai</fullName>
                </value>
                <value>
                    <fullName>Jaguar</fullName>
                </value>
                <value>
                    <fullName>Kia</fullName>
                </value>
                <value>
                    <fullName>Land Rover</fullName>
                </value>
                <value>
                    <fullName>Lexus</fullName>
                </value>
                <value>
                    <fullName>Lotus</fullName>
                </value>
                <value>
                    <fullName>Mazda</fullName>
                </value>
                <value>
                    <fullName>McLaren</fullName>
                </value>
                <value>
                    <fullName>Mini</fullName>
                </value>
                <value>
                    <fullName>Mitsubishi</fullName>
                </value>
                <value>
                    <fullName>Nissan</fullName>
                </value>
                <value>
                    <fullName>Peugeot</fullName>
                </value>
                <value>
                    <fullName>Porsche</fullName>
                </value>
                <value>
                    <fullName>Proton</fullName>
                </value>
                <value>
                    <fullName>Renault</fullName>
                </value>
                <value>
                    <fullName>Seat</fullName>
                </value>
                <value>
                    <fullName>Skoda</fullName>
                </value>
                <value>
                    <fullName>Smart</fullName>
                </value>
                <value>
                    <fullName>Subaru</fullName>
                </value>
                <value>
                    <fullName>Tesla</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Earliest_Win_Date_v2__c</fullName>
        <label>Earliest Win Date v2</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EnvironmentConsentWasObtainedIn_HAHBE__c</fullName>
        <label>Consent Environment (HAHBE)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dealership Portal</fullName>
                </value>
                <value>
                    <fullName>Web Checkout</fullName>
                </value>
                <value>
                    <fullName>OC Web App</fullName>
                </value>
                <value>
                    <fullName>OC Mobile App</fullName>
                </value>
                <value>
                    <fullName>Landing Page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnvironmentConsentWasObtainedIn_HAHBP__c</fullName>
        <label>Consent Environment (HAHBP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dealership Portal</fullName>
                </value>
                <value>
                    <fullName>Web Checkout</fullName>
                </value>
                <value>
                    <fullName>OC Web App</fullName>
                </value>
                <value>
                    <fullName>OC Mobile App</fullName>
                </value>
                <value>
                    <fullName>Landing Page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnvironmentConsentWasObtainedIn_SPPSUBE__c</fullName>
        <label>Consent Environment (SPPSUBE)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dealership Portal</fullName>
                </value>
                <value>
                    <fullName>Web Checkout</fullName>
                </value>
                <value>
                    <fullName>OC Web App</fullName>
                </value>
                <value>
                    <fullName>OC Mobile App</fullName>
                </value>
                <value>
                    <fullName>Landing Page</fullName>
                </value>
                <value>
                    <fullName>Mailchimp Re-consent Email</fullName>
                </value>
                <value>
                    <fullName>Inbound Email</fullName>
                </value>
                <value>
                    <fullName>Phonecall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieldAware_ID__c</fullName>
        <label>FieldAware ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldAware_URL__c</fullName>
        <label>FieldAware URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HasOptedIn_HAHBE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Help Arrange HC By Email (HAHBE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedIn_HAHBP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Help Arrange HC By Phone (HAHBP)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedIn_SPPSUBE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send PP P&amp;S Updates By Email (SPPSUBE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Pod_Point_Installed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Pod Point Installed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Strategic_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Those accounts likely to have a lifetime value to POD Point in excess of £5M.</description>
        <label>Key Strategic Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Industry_Other__c</fullName>
        <label>Lead Industry (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Industry__c</fullName>
        <label>Lead Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_ID__c</fullName>
        <label>Location ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <label>Medium</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Parking_Spaces__c</fullName>
        <label>Number of Parking Spaces</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passed_App_Consent_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed App Consent Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passed_Homecharge_Consent_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed Homecharge Consent Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Route_to_Market__c</fullName>
        <label>Primary Route to Market</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problem_Trying_to_Solve_Other__c</fullName>
        <label>Problem Trying to Solve (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem_Trying_to_Solve__c</fullName>
        <label>Problem Trying to Solve</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_to_Market__c</fullName>
        <description>Route to Markets we use at POD Point</description>
        <inlineHelpText>Please choose a route to market</inlineHelpText>
        <label>Account Route to Market</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Workplace</fullName>
                </value>
                <value>
                    <fullName>Destination</fullName>
                </value>
                <value>
                    <fullName>Built Environment</fullName>
                </value>
                <value>
                    <fullName>Academy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Route_to_Market__c</fullName>
        <label>Secondary Route to Market</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed_up_to_OC_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed up to OC App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Account_Stage_Last_Updated__c</fullName>
        <label>Strategic Account Stage Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Strategic_Account_Stage__c</fullName>
        <inlineHelpText>If the account is strategic, what stage are we currently at?</inlineHelpText>
        <label>Strategic Account Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Strategic_Account__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1. Initial installs</fullName>
                </value>
                <value>
                    <fullName>2. Informal Trial</fullName>
                </value>
                <value>
                    <fullName>3. Formal Trial</fullName>
                </value>
                <value>
                    <fullName>4. Regional Supply</fullName>
                </value>
                <value>
                    <fullName>5. Non Contractual Rollout</fullName>
                </value>
                <value>
                    <fullName>6. Long Term Supply Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the account strategic? i.e. is it likely to need more than 500 units in the next 5 years</description>
        <inlineHelpText>Tick this box if you think the account is likely to need more than 500 units in the next 5 years</inlineHelpText>
        <label>Strategic Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strategic_Account_picklist__c</fullName>
        <description>Strategic Account Tier</description>
        <label>Strategic Account Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Condition__c</fullName>
        <label>Vehicle Condition</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Delivery_Date__c</fullName>
        <label>Vehicle Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vehicle_End_Year__c</fullName>
        <label>Vehicle End Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Make__c</fullName>
        <label>Vehicle_Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <label>Vehicle_Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Purchase_Option__c</fullName>
        <label>Vehicle Purchase Option</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Start_Year__c</fullName>
        <label>Vehicle Start Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhatIndividualWasTold_HAHBE__c</fullName>
        <label>Consent Wording (HAHBE)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WhatIndividualWasTold_HAHBP__c</fullName>
        <label>Consent Wording (HAHBP)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WhatIndividualWasTold_SPPSUBE__c</fullName>
        <label>Consent Wording (SPPSUBE)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>With_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>With Competitor?</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Key_Strategic_Account__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>GeorgeAccounts</fullName>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Route_to_Market__c</columns>
        <columns>Account_Type__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>gnich</value>
        </filters>
        <label>George&apos;s Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Kent_Businesses</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Account_Type__c</columns>
        <columns>Route_to_Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_ZIP</field>
            <operation>startsWith</operation>
            <value>BR</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_ZIP</field>
            <operation>startsWith</operation>
            <value>CT</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_ZIP</field>
            <operation>startsWith</operation>
            <value>ME</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_ZIP</field>
            <operation>startsWith</operation>
            <value>DA</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_ZIP</field>
            <operation>startsWith</operation>
            <value>TN</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_STREET</field>
            <operation>contains</operation>
            <value>kent</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_CITY</field>
            <operation>contains</operation>
            <value>kent</value>
        </filters>
        <filters>
            <field>a.BillingAddress</field>
            <operation>within</operation>
            <value>51.217431:0.712723:30:km</value>
        </filters>
        <label>Kent Businesses</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Northern_Ireland</fullName>
        <booleanFilter>2 AND (1 OR 3)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_ZIP</field>
            <operation>startsWith</operation>
            <value>BT</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Business_Account</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_STREET</field>
            <operation>contains</operation>
            <value>BT</value>
        </filters>
        <label>Northern Ireland Business</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Old_Destination</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Account_Type__c</columns>
        <columns>Route_to_Market__c</columns>
        <columns>Strategic_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Type__c</field>
            <operation>equals</operation>
            <value>Destination Retail,Destination Leisure</value>
        </filters>
        <label>Old Destination</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Head_of_Destination</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Renault_Dealerships_Norway_2</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Norway</value>
        </filters>
        <filters>
            <field>Account_Type__c</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filters>
        <label>Renault Dealerships Norway</label>
        <language>en_US</language>
        <sharedTo>
            <group>Norway_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Subcontractors_Norway_2</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Norway</value>
        </filters>
        <filters>
            <field>Account_Type__c</field>
            <operation>equals</operation>
            <value>Subcontractors</value>
        </filters>
        <label>Subcontractors Norway</label>
        <language>en_US</language>
        <sharedTo>
            <group>Norway_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>base_list</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Type__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Strategic_Account__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Type__c</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </filters>
        <filters>
            <field>Account_Type__c</field>
            <operation>equals</operation>
            <value>Contractor</value>
        </filters>
        <filters>
            <field>Account_Type__c</field>
            <operation>equals</operation>
            <value>BE Influencer</value>
        </filters>
        <label>@base list</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>